Conectando ao MongoDB com repository e service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=socialmedia
+server.port=8081
+
+spring.data.mongodb.uri=mongodb://admin:password@192.168.1.68:27017/socialmedia?authSource=admin
